--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha03'
     //LiveData-Compose
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    //协程
+    /*用不用协程，UI都有几率不刷新
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    */
 }
